--- a/src/components/welcome/welcome.html
+++ b/src/components/welcome/welcome.html
@@ -1,1 +1,8 @@
 <h1>Hello Angular</h1>
+
+
+<p>
+    
+    <a ui-sref="app.contactList"> contacts </a>
+    <a ui-sref="app.contactForm"> form </a>
+</p>
